--- a/TomadaStore.ProductAPI/appsettings.json
+++ b/TomadaStore.ProductAPI/appsettings.json
@@ -6,7 +6,9 @@
     }
   },
   "AllowedHosts": "*",
-  "ConnectionStrings": {
-    "MongoDBAtlas": "mongodb+srv://zamperlinin_db_user:rXRAQbuH2Hpwx8Sc@interacaomongo.nxvi40n.mongodb.net/"
+  "MongoDB": {
+    "ConnectionURI": "mongodb+srv://zamperlinin_db_user:rXRAQbuH2Hpwx8Sc@interacaomongo.nxvi40n.mongodb.net/",
+    "DatabaseName": "TomadaStoreProductDB",
+    "CollectionName":  "Products"
   }
 }
