--- a/TomadaStore.ProductAPI/TomadaStore.ProductAPI.csproj
+++ b/TomadaStore.ProductAPI/TomadaStore.ProductAPI.csproj
@@ -13,7 +13,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <Folder Include="Controllers\" />
+    <ProjectReference Include="..\TomadaStore.Models\TomadaStore.Models.csproj" />
   </ItemGroup>
 
 </Project>
