--- a/TomadaStore.SaleAPI/appsettings.json
+++ b/TomadaStore.SaleAPI/appsettings.json
@@ -6,7 +6,9 @@
     }
   },
   "AllowedHosts": "*",
-  "ConnectionStrings": {
-    "MongoDBAtlas": "mongodb+srv://zamperlinin_db_user:ZfB58vQhhP9OJRps@interacaomongo.sqakavi.mongodb.net/"
+  "MongoDB": {
+    "ConnectionURI": "mongodb+srv://zamperlinin_db_user:ZfB58vQhhP9OJRps@interacaomongo.sqakavi.mongodb.net/",
+    "DatabaseName": "TomadaStoreSaleDB",
+    "CollectionName": "Sales"
   }
 }
