--- a/TomadaStore.SaleConsumerAPI/TomadaStore.SaleConsumerAPI.csproj
+++ b/TomadaStore.SaleConsumerAPI/TomadaStore.SaleConsumerAPI.csproj
@@ -4,12 +4,13 @@
     <TargetFramework>net10.0</TargetFramework>
     <Nullable>enable</Nullable>
     <ImplicitUsings>enable</ImplicitUsings>
-    <UserSecretsId>5283750a-0d0e-470f-8c2e-a1d522fe552d</UserSecretsId>
+    <UserSecretsId>f57acc2c-0d80-4e0a-83c5-d9b8c8bdff8b</UserSecretsId>
     <DockerDefaultTargetOS>Linux</DockerDefaultTargetOS>
   </PropertyGroup>
 
   <ItemGroup>
     <PackageReference Include="Microsoft.VisualStudio.Azure.Containers.Tools.Targets" Version="1.23.0" />
+    <PackageReference Include="MongoDB.Driver" Version="3.5.2" />
     <PackageReference Include="RabbitMQ.Client" Version="7.2.0" />
   </ItemGroup>
 
